--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,5 @@
 // Styles
+@import '~rc-datepicker/lib/style.css';
 // CoreUI Icons Set
 @import '~@coreui/icons/css/coreui-icons.css';
 // Import Flag Icons Set
