--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -39,3 +39,19 @@
     box-sizing: border-box;
     font-weight: normal;
 }
+
+.dropzone {
+	flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-width: 2px;
+    border-radius: 2px;
+    border-color: #eeeeee;
+    border-style: dashed;
+    background-color: #fafafa;
+    color: #bdbdbd;
+    outline: none;
+    transition: border .24s ease-in-out;
+}
