--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -55,3 +55,10 @@
     outline: none;
     transition: border .24s ease-in-out;
 }
+
+model-viewer {
+    width: 100%;
+    height: 500px;
+    border: 1px solid #eeeeee;
+}
+  
